@@ -2,7 +2,7 @@ Package: DataVisualizations
 Type: Package
 Title: Visualizations of High-Dimensional Data
 Version: 1.1.7
-Date: 2019-03-12
+Date: 2019-03-21
 Authors@R: c(person("Michael", "Thrun", email= "m.thrun@gmx.net",role=c("aut","cre","cph"), comment = c(ORCID = "0000-0001-9542-5543")),person("Felix", "Pape",role=c("aut","rev")),person("Onno", "Hansen-Goos",role=c("ctr","ctb")),person("Alfred", "Ultsch",role=c("dtc","ctb")))
 Maintainer: Michael Thrun <m.thrun@gmx.net>
 Description: The flagship idea of 'DataVisualizations' is the mirrored density plot (MD-plot) which is a PDE-optimized violin plot for either classified or non-classified multivariate data. The MD-plot is an alternative to the box-and-whisker diagram (box plot) and bean plot. Furthermore, a collection of various visualization methods for univariate data is provided. In the case of exploratory data analysis, 'DataVisualizations' makes it possible to inspect the distribution of each feature of a dataset visually through a combination of four methods. One of these methods is the Pareto density estimation (PDE) of the probability density function (pdf). Additionally, visualizations of the distribution of distances using PDE, the scatter-density plot using PDE for two variables as well as the Shepard density plot and the Bland-Altman plot are presented here. Pertaining to classified high-dimensional data, a number of visualizations are described, such as f.ex. the heat map and silhouette plot. A political map of the world or Germany can be visualized with the additional information defined by a classification of countries or regions. By extending the political map further, an uncomplicated function for a Choropleth map can be used which is useful for measurements across a geographic area. For categorical features, the Pie charts, slope charts and fan plots, improved by the ABC analysis, become usable. More detailed explanations are found in the book by Thrun, M.C.: "Projection-Based Clustering through Self-Organization and Swarm Intelligence" (2018) <doi:10.1007/978-3-658-20540-9>.
